[package]
name = "domichain-account-decoder"
version = "1.11.1"
description = "Domichain account decoder"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://github.com/domichain-labs/domichain"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-account-decoder"
license = "Apache-2.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_json = "1.0.81"
domichain-config-program = { path = "../programs/config", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-vote-program = { path = "../programs/vote", version = "=1.11.1" }
spl-token = { version = "=3.3.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.3.0", features = ["no-entrypoint"] }
thiserror = "1.0"
zstd = "0.11.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
