[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-accounts-cluster-bench"
version = "1.11.1"
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
domichain-account-decoder = { path = "../account-decoder", version = "=1.11.1" }
domichain-clap-utils = { path = "../clap-utils", version = "=1.11.1" }
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-faucet = { path = "../faucet", version = "=1.11.1" }
domichain-gossip = { path = "../gossip", version = "=1.11.1" }
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-measure = { path = "../measure", version = "=1.11.1" }
domichain-net-utils = { path = "../net-utils", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
spl-token = { version = "=3.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
domichain-core = { path = "../core", version = "=1.11.1" }
domichain-local-cluster = { path = "../local-cluster", version = "=1.11.1" }
domichain-test-validator = { path = "../test-validator", version = "=1.11.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
