[package]
name = "domichain-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
domichain-account-decoder = { workspace = true }
domichain-clap-utils = { workspace = true }
domichain-cli-config = { workspace = true }
domichain-client = { workspace = true }
domichain-faucet = { workspace = true }
domichain-gossip = { workspace = true }
domichain-logger = { workspace = true }
domichain-measure = { workspace = true }
domichain-net-utils = { workspace = true }
domichain-rpc-client = { workspace = true, features = ["default"] }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-streamer = { workspace = true }
domichain-transaction-status = { workspace = true }
domichain-version = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
domichain-core = { workspace = true }
domichain-local-cluster = { workspace = true }
domichain-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
