[package]
name = "domichain_risk_score"
description = "Domichain risk score module"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4"
log = { workspace = true }
domichain-sdk = { workspace = true }
ed25519-dalek = "1.0.1"
hex = "0.4.3"

[lib]
crate-type = ["lib"]
name = "domichain_risk_score"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
