[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-banking-bench"
version = "1.11.1"
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
publish = false

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-core = { path = "../core", version = "=1.11.1" }
domichain-gossip = { path = "../gossip", version = "=1.11.1" }
domichain-ledger = { path = "../ledger", version = "=1.11.1" }
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-measure = { path = "../measure", version = "=1.11.1" }
domichain-perf = { path = "../perf", version = "=1.11.1" }
domichain-poh = { path = "../poh", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
