[package]
name = "domichain-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
domichain-client = { workspace = true }
domichain-core = { workspace = true }
domichain-gossip = { workspace = true }
domichain-ledger = { workspace = true }
domichain-logger = { workspace = true }
domichain-measure = { workspace = true }
domichain-perf = { workspace = true }
domichain-poh = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-streamer = { workspace = true }
domichain-tpu-client = { workspace = true }
domichain-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
