[package]
name = "domichain-banks-client"
description = "Domichain banks client"
documentation = "https://docs.rs/domichain-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
domichain-banks-interface = { workspace = true }
domichain-program = { workspace = true }
domichain-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
domichain-banks-server = { workspace = true }
domichain-runtime = { workspace = true }

[lib]
crate-type = ["lib"]
name = "domichain_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
