[package]
name = "domichain-banks-interface"
version = "1.11.1"
description = "Domichain banks RPC interface"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "domichain_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
