[package]
name = "domichain-banks-server"
version = "1.11.1"
description = "Domichain banks server"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-banks-server"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
futures = "0.3"
domichain-banks-interface = { path = "../banks-interface", version = "=1.11.1" }
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-send-transaction-service = { path = "../send-transaction-service", version = "=1.11.1" }
tarpc = { version = "0.29.0", features = ["full"] }
tokio = { version = "~1.14.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "domichain_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
