[package]
name = "domichain-banks-server"
description = "Domichain banks server"
documentation = "https://docs.rs/domichain-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
domichain-banks-interface = { workspace = true }
domichain-client = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-send-transaction-service = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "domichain_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
