[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-bench-streamer"
version = "1.11.1"
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
publish = false

[dependencies]
crossbeam-channel = "0.5"
clap = { version = "3.1.5", features = ["cargo"] }
domichain-net-utils = { path = "../net-utils", version = "=1.11.1" }
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
