[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-bench-tps-simple"
version = "1.0.0"
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.17"
rayon = "1.5.3"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
domichain-clap-utils = { path = "../clap-utils", version = "=1.0.0" }
domichain-cli-config = { path = "../cli-config", version = "=1.0.0" }
domichain-client = { path = "../client", version = "=1.0.0" }
domichain-core = { path = "../core", version = "=1.0.0" }
domichain-bench-tps = { path = "../bench-tps", version = "=1.0.0" }
domichain-faucet = { path = "../faucet", version = "=1.0.0" }
domichain-genesis = { path = "../genesis", version = "=1.0.0" }
domichain-gossip = { path = "../gossip", version = "=1.0.0" }
domichain-logger = { path = "../logger", version = "=1.0.0" }
domichain-measure = { path = "../measure", version = "=1.0.0" }
domichain-metrics = { path = "../metrics", version = "=1.0.0" }
domichain-net-utils = { path = "../net-utils", version = "=1.0.0" }
domichain-rpc = { path = "../rpc", version = "=1.0.0" }
domichain-runtime = { path = "../runtime", version = "=1.0.0" }
domichain-sdk = { path = "../sdk", version = "=1.0.0" }
domichain-streamer = { path = "../streamer", version = "=1.0.0" }
domichain-version = { path = "../version", version = "=1.0.0" }
thiserror = "1.0"

[dev-dependencies]
serial_test = "0.6.0"
domichain-local-cluster = { path = "../local-cluster", version = "=1.0.0" }
domichain-test-validator = { path = "../test-validator", version = "=1.0.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
