[package]
name = "domichain-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
domichain-clap-utils = { workspace = true }
domichain-cli-config = { workspace = true }
domichain-client = { workspace = true }
domichain-connection-cache = { workspace = true }
domichain-core = { workspace = true }
domichain-faucet = { workspace = true }
domichain-genesis = { workspace = true }
domichain-gossip = { workspace = true }
domichain-logger = { workspace = true }
domichain-measure = { workspace = true }
domichain-metrics = { workspace = true }
domichain-net-utils = { workspace = true }
domichain-rpc = { workspace = true }
domichain-rpc-client = { workspace = true }
domichain-rpc-client-api = { workspace = true }
domichain-rpc-client-nonce-utils = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-streamer = { workspace = true }
domichain-thin-client = { workspace = true }
domichain-tpu-client = { workspace = true }
domichain-version = { workspace = true }
spl-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
domichain-local-cluster = { workspace = true }
domichain-test-validator = { workspace = true }
tempfile = "3.5.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
