[package]
name = "domichain-bloom"
version = "1.11.1"
description = "Domichain bloom filter"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-bloom"
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["rc"] }
serde_derive = "1.0.103"
domichain-frozen-abi = { path = "../frozen-abi", version = "=1.11.1" }
domichain-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }

[lib]
crate-type = ["lib"]
name = "domichain_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
