[package]
name = "domichain-bucket-map"
version = "1.11.1"
description = "domichain-bucket-map"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-bucket-map"
readme = "../README.md"
repository = "https://Domino-Blockchain/domichain"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
memmap2 = "0.5.3"
modular-bitfield = "0.11.2"
rand = "0.7.0"
domichain-measure = { path = "../measure", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
tempfile = "3.3.0"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.3"
domichain-logger = { path = "../logger", version = "=1.11.1" }

[lib]
crate-type = ["lib"]
name = "domichain_bucket_map"

[[bench]]
name = "bucket_map"
