[package]
name = "domichain-bucket-map"
description = "domichain-bucket-map"
documentation = "https://docs.rs/domichain-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
log = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
domichain-measure = { workspace = true }
domichain-sdk = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
domichain-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "domichain_bucket_map"

[[bench]]
name = "bucket_map"
