[package]
name = "domichain-clap-v3-utils"
version = "1.11.1"
description = "Domichain utilities for the clap v3"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-clap-utils"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.1.5", features = ["cargo"] }
rpassword = "6.0"
domichain-perf = { path = "../perf", version = "=1.11.1" }
domichain-remote-wallet = { path = "../remote-wallet", version = "=1.11.1", default-features = false }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
url = "2.2.2"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "domichain_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
