[package]
name = "domichain-clap-v3-utils"
description = "Domichain utilities for the clap v3"
documentation = "https://Domino-Blockchain/domichain"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "3.2.23", features = ["cargo"] }
rpassword = { workspace = true }
domichain-perf = { workspace = true }
domichain-remote-wallet = { workspace = true }
domichain-sdk = { workspace = true }
domichain-zk-token-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "domichain_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
