[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-cli-config"
description = "Blockchain, Rebuilt for Scale"
version = "1.11.1"
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-cli-config"

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_yaml = "0.8.24"
domichain-clap-utils = { path = "../clap-utils", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.57"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
