[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.11.1"
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.16.2"
pretty-hex = "0.3.0"
semver = "1.0.9"
serde = "1.0.137"
serde_json = "1.0.81"
domichain-account-decoder = { path = "../account-decoder", version = "=1.11.1" }
domichain-clap-utils = { path = "../clap-utils", version = "=1.11.1" }
domichain-cli-config = { path = "../cli-config", version = "=1.11.1" }
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
domichain-vote-program = { path = "../programs/vote", version = "=1.11.1" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
